--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "clsx": "^2.1.1",
     "decode-uri-component": "^0.4.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
+    "ngrok": "^5.0.0-beta.2",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
