--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.469.0",
-    "next": "15.1.4",
+    "next": "^15.1.7",
     "ngrok": "^5.0.0-beta.2",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
