--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "^0.5.2",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.7",
     "ngrok": "^5.0.0-beta.2",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -46,6 +48,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
