--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/expiry/notify",
       "schedule": "30 19 * * *"
+    },
+    {
+      "path": "/api/cron/daily-check",
+      "schedule": "0 14 * * *"
     }
   ]
 }
